--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,8 @@ typings/
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
+# Package-lock
+package-lock.json
 
 # Next.js build output
 .next
