--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "lite-server": "lite-server",
-    "heroku-postbuild": "npm run build”
+    "heroku-postbuild": "node server.js”
   },
   "repository": {
     "type": "git",
