seeing if this works for heroku

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "lite-server": "lite-server",
-    "heroku-postbuild": "node server.js”
+    "lite-server": "lite-server"
+
   },
   "repository": {
     "type": "git",
